--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/vision": "^3.23.4",
+    "axios": "^1.6.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-auth-sanity": "^1.5.3",
@@ -20,6 +21,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "sanity": "^3.23.4",
+    "stripe": "^14.10.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
