--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/vision": "^3.23.4",
+    "@stripe/stripe-js": "^2.2.2",
     "axios": "^1.6.3",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
